--- a/css/login.css
+++ b/css/login.css
@@ -76,30 +76,54 @@ header{
     }
 }
 main{
-    margin: 5rem;
+    margin: 3rem;
+    margin-right: 8rem;
+    margin-left: 8rem;
     border: var(--border-size) solid var(--red-color);
     padding: 3rem;
-    height: 20rem;
+    height: 25rem;
     & div{
         margin: 3rem;
         float: left;
-        width: 50%;
+        width: 55%;
         font-size: var(--font-size-movie);
     }
     & article{
         border: var(--border-size) solid var(--red-color);
-        margin-left: 70%;
+        margin-left: 75%;
         height: 100%;
         & ul{
             list-style: none;
+            text-align: center;
+            & .input{
+                border-top: var(--border-size) solid var(--gray-color);
+                border-bottom: var(--border-size) solid var(--gray-color);
+            }
             & li{
                 margin: 1rem;
+                & input{
+                    width: 100%;
+                    border: var(--size-none);
+                }
+                & button{
+                    margin-top: 2rem;
+                    width: 100%;
+                    border: var(--border-size) solid var(--gray-color);
+                }
+                & .login_button{
+                    height: 50px;
+                    border: var(--size-none);
+                }
             }
         }
         & h6{
             font-size: var(--font-size-movie);
-            margin: 1rem;
-            margin-left: 7rem;
+            margin: 2rem;
+            margin-left: 4rem;
+            margin-bottom: 7rem;
+        }
+        & p{
+            margin-left: 4rem;
         }
     }
 }
