--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     --color-garchig-main : #FFF;
     --color-text-engiin: #FFF;
     --color-border-line: #FFF;
+    --color-border-li:#4F4F4F;
     --color-footer-text: #7F7F7F;
 
     --font-header: Arial, Helvetica, sans-serif;
