--- a/css/movie.css
+++ b/css/movie.css
@@ -53,5 +53,12 @@ header{
     }
 }
 main{
-    
+    img[src="Images/nowplaying_poster1.png"] {
+        width: 19.875rem;
+        height: 31.82338rem;
+        flex-shrink: 0;
+        background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+  
 }
