--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --font-big: 2rem;
     --size-none: 0px;
     --border-size: 0.0001rem;
+    --font-size-reting: 0.6rem;
 
     --color-bg : #000;
     --color-garchig-main : #FFF;
