--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@600&family=Inter:wght@100;300&family=Londrina+Solid&display=swap');
 :root{
     --white-color: #ffffff;
     --gray-color: #808080;
@@ -16,8 +17,7 @@
     --color-footer-text: #7F7F7F;
 
     --font-header: Arial, Helvetica, sans-serif;
-    --font-lohit : 'Lohit Devanagari', sans-serif;
-    --font-abhaya: 'abhaya-libre-semibold-regular', sans-serif;
+    --font-abhaya: 'Abhaya Libre', serif;
     --font-londrina: 'Londrina Solid', sans-serif;
     --font-text-engiin: 'Inter', sans-serif;
     --font-size-big: 1.2rem;
@@ -26,3 +26,4 @@
 
     --percent-hundred: 100%;
 }
+
