--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
     --color-footer-text: #7F7F7F;
 
     --font-header: Arial, Helvetica, sans-serif;
-    --font-abhaya: 'Abhaya Libre', serif;
+    --font-abhaya: 'Abhaya Libre', sans-serif;
     --font-londrina: 'Londrina Solid', sans-serif;
     --font-text-engiin: 'Inter', sans-serif;
     --font-size-big: 1.2rem;
