--- a/css/index.css
+++ b/css/index.css
@@ -208,16 +208,14 @@ section::-webkit-scrollbar {
 }
 @media(max-width: 48rem){
     header{
-        height: 30vh;
+        height: 28vh;
         max-width: 48rem;
-        font-size: var(--font-size-reting);
         & nav:nth-of-type(2){
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-            align-items: center;
+            justify-content: space-evenly;
             & #menu{
                 flex-direction: column;
+                padding: 1.5rem;
+                font-size: var(--font-size-small);
             }
         }
     }
@@ -301,6 +299,91 @@ section::-webkit-scrollbar {
     }
     
 }
+
+@media(max-width: 25rem){
+    header{
+        height: 20vh;
+        max-width: 25rem;
+        & nav:nth-of-type(2){
+            justify-content: center;
+            & #menu{
+                flex-direction: column;
+                padding: 0.5rem;
+                font-size: 0.65rem;
+            }
+            & #logo{
+                height: 5rem;
+                width: auto;
+            }
+        }
+    }
+    main{
+        & .container_poster{
+            & .button{
+                place-self: center;
+                position: absolute;
+                top: 63%;
+                & button{
+                    padding: 0.2rem 0.5rem;
+                    font-size: 0.5rem;
+                    & img{
+                        height: 0.6rem;
+                        width: auto;
+                    }
+                    
+                }
+            }
+        }
+        & section{
+            padding: 0;
+            width: auto;
+            & h2{
+                padding: 1rem 0rem 2rem 0.5rem;
+                font-size: var(--font-size-small);
+            }
+            & ul{
+                & a{
+                    padding: 1rem;
+                    font-size: var(--font-size-reting);
+                    & img{
+                        height: 10rem;
+                        width: auto;
+                    }
+                }
+            }
+        }
+    }
+    footer{
+        padding: 0;
+        justify-content: space-evenly;
+        & #address_info{
+            padding-left: 4rem;
+            font-size: 0.7rem;
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1rem;
+                    width: auto;
+                }
+            }
+        }
+        & #map{
+            flex-direction: column;
+            padding-right: 4rem;
+            & .location{
+                & p{
+                    font-size: 0.7rem;
+                   
+                }
+            }
+            & img{
+                height: 3rem;
+            }
+        }
+    }
+    
+}
+
 
 
   
