--- a/css/nowplaying.css
+++ b/css/nowplaying.css
@@ -142,3 +142,156 @@ footer{
         }
     }
 }
+@media(max-width: 48rem){
+    header{
+        height: 28vh;
+        max-width: 48rem;
+        & nav:nth-of-type(2){
+            justify-content: space-evenly;
+            & #menu{
+                flex-direction: column;
+                padding: 1.5rem;
+                font-size: var(--font-size-small);
+            }
+        }
+    }
+    main{
+        & section{
+            grid-gap: 1rem;
+            & article{
+                padding: 0.5rem;
+                & .movie_poster{
+                    font-size: var(--font-size-big);
+                    & img{
+                        height: 18rem;
+                    }
+                }
+                & .rating{
+                    & a{
+                        padding: 0.3rem;
+                        font-size: 0.7rem;
+                        & img{
+                            height: 1rem;
+                        }
+                    }
+                    
+                }
+                
+            }
+        }
+    }
+    footer{
+        padding-left: 2rem;
+        width: auto;
+        justify-content: space-between;
+        & #address_info{
+            padding-left: 4rem;
+            font-size: var(--font-size-small);
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1.5rem;
+                    width: auto;
+                }
+            }
+        }
+        & #map{
+            flex-direction: column;
+            padding-right: 4rem;
+            & .location{
+                margin: 0.2rem;
+                & p{
+                    padding: 0.2rem;
+                    font-size: var(--font-size-small);
+                   
+                }
+            }
+            & img{
+                height: 3.5rem;
+            }
+        }
+    }
+}
+@media(max-width: 25rem){
+    header{
+        height: 20vh;
+        max-width: 25rem;
+        & nav:nth-of-type(2){
+            justify-content: center;
+            & #menu{
+                flex-direction: column;
+                padding: 0.5rem;
+                font-size: 0.65rem;
+            }
+            & #logo{
+                height: 5rem;
+                width: auto;
+            }
+        }
+        & #address_icon{
+            padding-top: 0.5rem;
+            padding-right: 1.5rem;
+            & a{
+                padding-right: 0.2rem;
+                & img{
+                    height: 0.5rem;
+                }
+            }
+        }
+    }
+    main{
+        & section{
+            width: auto;
+            padding: 0;
+            grid-gap: 0.2rem;
+            & article{
+                padding: 0.1rem;
+                & .movie_poster{
+                    font-size: var(--font-size-small);
+                    & img{
+                        height: 10rem;
+                    }
+                }
+                & .rating{
+                    & a{
+                        padding: 0.1rem;
+                        font-size: 0.5rem;
+                        & img{
+                            height: 0.75rem;
+                        }
+                    }
+                    
+                }
+                
+            }
+        }
+    }
+    footer{
+        padding: 0;
+        justify-content: space-evenly;
+        & #address_info{
+            padding-left: 4rem;
+            font-size: 0.7rem;
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1rem;
+                    width: auto;
+                }
+            }
+        }
+        & #map{
+            flex-direction: column;
+            padding-right: 4rem;
+            & .location{
+                & p{
+                    font-size: 0.7rem;
+                   
+                }
+            }
+            & img{
+                height: 3rem;
+            }
+        }
+    }
+}
