--- a/css/create.css
+++ b/css/create.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -30,7 +29,7 @@ header{
                 font-weight: bold;
                 color: var(--color-garchig-main);
                 padding-left: 7rem;
-                 
+                
             }
         }
         & #logo{
@@ -77,6 +76,7 @@ main{
                 border-bottom: var(--border-size) solid var(--color-border-li);
                 border-top: var(--border-size) solid var(--color-border-li);
                 height: 2.1rem;
+                display: list-item;
                 & input{
                     color: var(--white-color);
                     width: 99%;
@@ -91,17 +91,14 @@ main{
                     float: left;
                 }
                 & #lastname {
-                    width: 71rem;
+                    width: 92%;
                 }
                 & #firstname {
-                    width: 71rem;
+                    width: 92%;
                 }
                 & #dateandtime{
                     float: left;
-                    width: 71rem;
-                }
-                & input-placholder{
-                    color: var(--white-color);
+                    width: 92%;
                 }
             }
         }
@@ -173,4 +170,193 @@ footer{
             width: auto;
         }
     }
+}
+
+
+@media(max-width: 48rem){
+    header{
+        height: 28vh;
+        max-width: 48rem;
+        & nav:nth-of-type(2){
+            justify-content: space-evenly;
+            & #menu{
+                flex-direction: column;
+                padding: 1.5rem;
+                font-size: var(--font-size-small);
+            }
+        }
+    }
+    main{
+        margin-left: 3rem;
+        margin-right: 3rem;
+        margin-bottom: 3rem;
+        & section{
+            & h1{
+                margin-top: 4rem;
+            }
+            & p{
+                font-size: 0.6rem;
+            }
+            & ul{
+                & li{
+                    margin-top: 1.5rem;
+                    margin-bottom: 1.2rem;
+                    height: 1.7rem;
+                    & input{
+                        width: 99%;
+                        font-size: 0.6rem;
+                        padding: 0.4rem;
+                    }
+                    & #lastname {
+                        width: 92%;
+                    }
+                    & #firstname {
+                        width: 92%;
+                    }
+                    & #dateandtime{
+                        width: 92%;
+                    }
+                }
+            }
+            & button{
+                margin-top: 2rem;
+                width: 10rem;
+                height: 2rem;
+            }
+            & #accept_button{
+                transform: scale(2.5);
+                margin-left: 0.5rem;
+                margin-top: 1rem;
+            }
+            & #accept_text{
+                font-size: 0.7rem;
+                margin-right: 30%;
+            }
+        }
+    }
+    footer{
+        padding-left: 2rem;
+        width: auto;
+        justify-content: space-between;
+        & #address_info{
+            padding-left: 4rem;
+            font-size: var(--font-size-small);
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1.5rem;
+                    width: auto;
+                }
+            }
+        }
+        & #map{
+            flex-direction: column;
+            padding-right: 4rem;
+            & .location{
+                margin: 0.2rem;
+                & p{
+                    padding: 0.2rem;
+                    font-size: var(--font-size-small);
+                   
+                }
+            }
+            & img{
+                height: 3.5rem;
+            }
+        }
+    }
+    
+}
+
+@media(max-width: 25rem){
+    header{
+        height: 28vh;
+        max-width: 48rem;
+        & nav:nth-of-type(2){
+            justify-content: space-evenly;
+            & #menu{
+                flex-direction: column;
+                padding: 1.5rem;
+                font-size: var(--font-size-small);
+            }
+        }
+    }
+    main{
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-bottom: 1rem;
+        & section{
+            & h1{
+                font-size: var(--font-size-big);
+                margin-top: 2rem;
+            }
+            & p{
+                font-size: 0.3rem;
+            }
+            & ul{
+                & li{
+                    margin-top: 1rem;
+                    margin-bottom: 0.8rem;
+                    height: 1rem;
+                    & input{
+                        width: 99%;
+                        font-size: 0.3rem;
+                        padding: 0.4rem;
+                    }
+                    & #lastname {
+                        width: 92%;
+                    }
+                    & #firstname {
+                        width: 92%;
+                    }
+                    & #dateandtime{
+                        width: 92%;
+                    }
+                }
+            }
+            & button{
+                margin-top: 2rem;
+                width: 10rem;
+                height: 2rem;
+            }
+            & #accept_button{
+                transform: scale(2.5);
+                margin-left: 0.5rem;
+                margin-top: 1rem;
+            }
+            & #accept_text{
+                font-size: 0.7rem;
+                margin-right: 30%;
+            }
+        }
+    }
+    footer{
+        padding: 0;
+        justify-content: space-evenly;
+        & #address_info{
+            padding-left: 4rem;
+            font-size: 0.7rem;
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1rem;
+                    width: auto;
+                }
+            }
+        }
+        & #map{
+            flex-direction: column;
+            padding-right: 4rem;
+            & .location{
+                & p{
+                    font-size: 0.7rem;
+                   
+                }
+            }
+            & img{
+                height: 3rem;
+            }
+        }
+    }
+    
 }
