--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@600&family=Inter:wght@100;300&family=Londrina+Solid&display=swap');
 :root{
-    --white-color: #ffffff;
-    --gray-color: #808080;
-    --black-color: #000000;
-    --red-color: #ff0000;
-    --font-big: 2rem;
+    --color-white: #fff;
+    --color-gray:#4F4F4F;
+    --color-black: #000;
+    --color-red: #E60000;
+    --font-size-big: 2rem;
     --size-none: 0px;
     --border-size: 0.0001rem;
-    --font-size-reting: 0.6rem;
+    
 
-    --color-bg : #000;
-    --color-garchig-main : #FFF;
-    --color-text-engiin: #FFF;
-    --color-border-line: #FFF;
-    --color-border-li:#4F4F4F;
+    --color-bg : var(--color-black);
+    --color-garchig-main : var(--color-white);
+    --color-text-engiin: var(--color-white);
+    --color-border-line: var(--color-white);
+    --color-border-li:var(--color-gray);
     --color-footer-text: #7F7F7F;
 
     --font-header: Arial, Helvetica, sans-serif;
@@ -23,6 +23,7 @@
     --font-size-big: 1.2rem;
     --font-size-movie: 2rem;
     --font-size-small: 0.8rem;
+    --font-size-reting: 0.6rem;
 
     --percent-hundred: 100%;
 }
