--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@600&family=Inter:wght@100;300&family=Londrina+Solid&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&family=Inter:wght@100;300&family=Londrina+Solid&display=swap');
 :root{
     --color-white: #fff;
     --color-gray:#4F4F4F;
@@ -17,7 +17,7 @@
     --color-footer-text: #7F7F7F;
 
     --font-header: Arial, Helvetica, sans-serif;
-    --font-abhaya: 'Abhaya Libre', sans-serif;
+    --font-garchig: 'Balsamiq Sans', sans-serif;
     --font-londrina: 'Londrina Solid', sans-serif;
     --font-text-engiin: 'Inter', sans-serif;
     --font-size-big: 1.2rem;
@@ -26,6 +26,5 @@
     --font-size-reting: 0.6rem;
 
     --percent-hundred: 100%;
-    
 }
 
