--- a/css/nowplaying.css
+++ b/css/nowplaying.css
@@ -56,13 +56,14 @@ header{
     }
 }
 main{
+    padding-left: 3rem;
+    padding-right: 3rem;
     & section{
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(3, 1fr);
-        grid-gap: 1rem;
+        padding: 0.5rem 2rem 0.5rem 2rem;
         & article{
-            padding: 1rem;
             & .movie_poster{
                 display: grid;
                 text-decoration: none;
@@ -72,7 +73,7 @@ main{
                 color: var(--color-text-engiin);
                 & img{
                     place-self: center;
-                    height: 23rem;
+                    height: 25rem;
                     width: auto;
                 }
                 
@@ -89,7 +90,6 @@ main{
                     font-size: var(--font-size-big);
                     color: var(--color-text-engiin);
                     & img{
-                    
                         height: 2rem;
                     }
                 }
