--- a/css/login.css
+++ b/css/login.css
@@ -3,10 +3,6 @@
     padding: 0;
     font-family: var(--font-text-engiin);
     background-color: var(--color-bg);
-    color: var(--white-color);
-    *::placeholder {
-        color: var(--white-color);
-    }
 }
 header{
     width: var(--percent-hundred);
@@ -22,19 +18,27 @@ header{
             list-style-type: none;
             font-size: var(--font-size-big);
             padding-top: 3rem;
-            padding-left: 2rem;
+            padding-left: 7rem;
             & a{
                 text-decoration: none;
                 font-family: var(--font-header);
                 font-weight: bold;
                 color: var(--color-garchig-main);
-                padding-left: 7rem;
+                padding-left: 4rem;
                  
             }
+            & #login{
+                text-decoration: none;
+                font-family: var(--font-header);
+                font-weight: bold;
+                color: var(--color-red);
+                padding-left: 4rem;
+            }
+
         }
         & #logo{
             padding-left: 3rem;
-            height: 8rem;
+            height: 10rem;
         }
     }
     & #address_icon{
@@ -56,9 +60,10 @@ main{
     margin: 3rem;
     margin-right: 8rem;
     margin-left: 8rem;
-    border: var(--border-size) solid var(--red-color);
+    border: var(--border-size) solid var(--color-red);
     padding: 3rem;
     height: 25rem;
+    color: var(--color-white);
     & div{
         margin: 3rem;
         float: left;
@@ -66,7 +71,7 @@ main{
         font-size: var(--font-size-movie);
     }
     & article{
-        border: var(--border-size) solid var(--red-color);
+        border: var(--border-size) solid var(--color-red);
         margin-left: 75%;
         height: 100%;
         & ul{
@@ -86,7 +91,7 @@ main{
                     margin-top: 2rem;
                     height: 2rem;
                     width: 100%;
-                    border: var(--border-size) solid var(--gray-color);
+                    border: var(--border-size) solid var(--color-gray);
                 }
             }
         }
@@ -119,6 +124,7 @@ footer{
                 text-decoration: none;
                 text-align: center;
                 justify-content: center;
+                color: var(--color-red);
             }
             & img{
                 padding: 1rem;
@@ -150,4 +156,209 @@ footer{
             width: auto;
         }
     }
+}
+@keyframes slide1{
+    0%{opacity: 0;}
+    50%{opacity: 0;}
+    100%{opacity: 1;}
+}
+@keyframes slide2{
+    0%{opacity: 0;}
+    50%{opacity: 1;}
+    100%{opacity: 0;}
+}
+@keyframes slide3{
+    0%{opacity: 1;}
+    50%{opacity: 0;}
+    100%{opacity: 0;}
+}
+section::-webkit-scrollbar {
+    display: none; 
+}
+@media(max-width: 48rem){
+    header{
+        height: 28vh;
+        max-width: 48rem;
+        & nav:nth-of-type(2){
+            justify-content: space-evenly;
+            & #menu{
+                flex-direction: column;
+                padding: 1.5rem;
+                font-size: var(--font-size-small);
+            }
+        }
+    }
+    main{
+        & .container_poster{
+            width: auto;
+            padding: 1rem;
+            & #bigposter-container{
+                width: 80%;
+                position: relative;
+                & #bigposter1,
+                & #bigposter2,
+                & #bigposter3{
+                    position: absolute;
+                    top: 0%;
+                    left: 0%;
+                    height: auto;
+                    width: var(--percent-hundred);
+                }
+            }
+            & .button{
+                place-self: center;
+                position: absolute;
+                top: 90%;
+                & button{
+                    padding: 0.5rem 1rem;
+                    font-size: var(--font-size-reting);
+                    
+                }
+            }
+        }
+        & section{
+            padding: rem;
+            width: auto;
+            & h2{
+                padding: 2rem 0rem 2rem 1.5rem;
+            }
+            & ul{
+                & a{
+                    padding: 1rem;
+                    font-size: var(--font-size-big);
+                    & img{
+                        height: 21.5rem;
+                        width: auto;
+                    }
+    
+                }
+            }
+        }
+    }
+    footer{
+        padding-left: 2rem;
+        width: auto;
+        justify-content: space-between;
+        & #address_info{
+            padding-left: 4rem;
+            font-size: var(--font-size-small);
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1.5rem;
+                    width: auto;
+                }
+            }
+        }
+        & #map{
+            flex-direction: column;
+            padding-right: 4rem;
+            & .location{
+                margin: 0.2rem;
+                & p{
+                    padding: 0.2rem;
+                    font-size: var(--font-size-small);
+                   
+                }
+            }
+            & img{
+                height: 3.5rem;
+            }
+        }
+    }
+    
+}
+
+@media(max-width: 25rem){
+    header{
+        height: 20vh;
+        max-width: 25rem;
+        & nav:nth-of-type(2){
+            justify-content: center;
+            & #menu{
+                flex-direction: column;
+                padding: 0.5rem;
+                font-size: 0.65rem;
+            }
+            & #logo{
+                height: 5rem;
+                width: auto;
+            }
+        }
+        & #address_icon{
+            padding-top: 0.5rem;
+            padding-right: 1.5rem;
+            & a{
+                padding-right: 0.2rem;
+                & img{
+                    height: 0.5rem;
+                }
+            }
+        }
+    }
+    main{
+        & .container_poster{
+            & .button{
+                place-self: center;
+                position: absolute;
+                top: 63%;
+                & button{
+                    padding: 0.2rem 0.5rem;
+                    font-size: 0.5rem;
+                    & img{
+                        height: 0.6rem;
+                        width: auto;
+                    }
+                    
+                }
+            }
+        }
+        & section{
+            padding: 0;
+            width: auto;
+            & h2{
+                padding: 1rem 0rem 2rem 0.5rem;
+                font-size: var(--font-size-small);
+            }
+            & ul{
+                & a{
+                    padding: 1rem;
+                    font-size: var(--font-size-reting);
+                    & img{
+                        height: 10rem;
+                        width: auto;
+                    }
+                }
+            }
+        }
+    }
+    footer{
+        padding: 0;
+        justify-content: space-evenly;
+        & #address_info{
+            padding-left: 4rem;
+            font-size: 0.7rem;
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1rem;
+                    width: auto;
+                }
+            }
+        }
+        & #map{
+            flex-direction: column;
+            padding-right: 4rem;
+            & .location{
+                & p{
+                    font-size: 0.7rem;
+                   
+                }
+            }
+            & img{
+                height: 3rem;
+            }
+        }
+    }
+    
 }
