--- a/css/login.css
+++ b/css/login.css
@@ -22,13 +22,13 @@ header{
             list-style-type: none;
             font-size: var(--font-size-big);
             padding-top: 3rem;
-            padding-left: 2rem;
+            padding-left: 7rem;
             & a{
                 text-decoration: none;
                 font-family: var(--font-header);
                 font-weight: bold;
                 color: var(--color-garchig-main);
-                padding-left: 7rem;
+                padding-left: 4rem;
                  
             }
             & #login{
@@ -42,7 +42,7 @@ header{
         }
         & #logo{
             padding-left: 3rem;
-            height: 8rem;
+            height: 10rem;
         }
     }
     & #address_icon{
@@ -179,100 +179,6 @@ footer{
 section::-webkit-scrollbar {
     display: none; 
 }
-@media(max-width: 48rem){
-    header{
-        height: 28vh;
-        max-width: 48rem;
-        & nav:nth-of-type(2){
-            justify-content: space-evenly;
-            & #menu{
-                flex-direction: column;
-                padding: 1.5rem;
-                font-size: var(--font-size-small);
-            }
-        }
-    }
-    main{
-        & .container_poster{
-            width: auto;
-            padding: 1rem;
-            & #bigposter-container{
-                width: 80%;
-                position: relative;
-                & #bigposter1,
-                & #bigposter2,
-                & #bigposter3{
-                    position: absolute;
-                    top: 0%;
-                    left: 0%;
-                    height: auto;
-                    width: var(--percent-hundred);
-                }
-            }
-            & .button{
-                place-self: center;
-                position: absolute;
-                top: 90%;
-                & button{
-                    padding: 0.5rem 1rem;
-                    font-size: var(--font-size-reting);
-                    
-                }
-            }
-        }
-        & section{
-            padding: rem;
-            width: auto;
-            & h2{
-                padding: 2rem 0rem 2rem 1.5rem;
-            }
-            & ul{
-                & a{
-                    padding: 1rem;
-                    font-size: var(--font-size-big);
-                    & img{
-                        height: 21.5rem;
-                        width: auto;
-                    }
-    
-                }
-            }
-        }
-    }
-    footer{
-        padding-left: 2rem;
-        width: auto;
-        justify-content: space-between;
-        & #address_info{
-            padding-left: 4rem;
-            font-size: var(--font-size-small);
-            & li{
-                & img{
-                    padding: 0.5rem;
-                    height: 1.5rem;
-                    width: auto;
-                }
-            }
-        }
-        & #map{
-            flex-direction: column;
-            padding-right: 4rem;
-            & .location{
-                margin: 0.2rem;
-                & p{
-                    padding: 0.2rem;
-                    font-size: var(--font-size-small);
-                   
-                }
-            }
-            & img{
-                height: 3.5rem;
-            }
-        }
-    }
-    
-}
-
 @media(max-width: 25rem){
     header{
         height: 20vh;
@@ -301,38 +207,135 @@ section::-webkit-scrollbar {
         }
     }
     main{
-        & .container_poster{
-            & .button{
-                place-self: center;
-                position: absolute;
-                top: 63%;
-                & button{
-                    padding: 0.2rem 0.5rem;
-                    font-size: 0.5rem;
-                    & img{
-                        height: 0.6rem;
-                        width: auto;
-                    }
-                    
+        
+    }
+    footer{
+        padding: 0;
+        justify-content: space-evenly;
+        & #address_info{
+            padding-left: 4rem;
+            font-size: 0.7rem;
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1rem;
+                    width: auto;
                 }
             }
         }
-        & section{
-            padding: 0;
-            width: auto;
-            & h2{
-                padding: 1rem 0rem 2rem 0.5rem;
+        & #map{
+            flex-direction: column;
+            padding-right: 4rem;
+            & .location{
+                & p{
+                    font-size: 0.7rem;
+                   
+                }
+            }
+            & img{
+                height: 3rem;
+            }
+        }
+    }
+    
+}
+@media(max-width: 48rem){
+    header{
+        height: 12rem;
+        max-width: 48rem;
+        & nav:nth-of-type(2){
+            justify-content: space-evenly;
+            & #menu{
+                flex-direction: column;
+                padding: 1.5rem;
                 font-size: var(--font-size-small);
             }
+        }
+    }
+    main{
+        margin-right: 1rem;
+        margin-left: 1rem;
+        margin-bottom: 1rem;
+        border: var(--border-size) solid var(--color-red);
+        padding: 1.5rem;
+        height: 22rem;
+        color: var(--color-white);
+        & div{
+            margin: 2rem;
+            float: left;
+            width: 55%;
+            font-size: 1.4rem;
+        }
+        & article{
+            border: var(--border-size) solid var(--color-red);
+            margin-left: 70%;
+            height: 100%;
             & ul{
-                & a{
-                    padding: 1rem;
-                    font-size: var(--font-size-reting);
-                    & img{
-                        height: 10rem;
-                        width: auto;
+                & li{
+                    margin: 1rem;
+                    padding: 0.2rem;
+                    & button{
+                        margin-top: 1rem;
+                        height: 2rem;
                     }
                 }
+            }
+            & h6{
+                font-size: var(--font-size-movie);
+                margin: 1rem;
+                margin-left: 2rem;
+                margin-bottom: 4rem;
+            }
+            & p{
+                margin-left: 1rem;
+            }
+        }
+    }
+    main{
+        margin: 0rem;
+        margin-right: 0.5rem;
+        margin-left: 0.5rem;
+        padding: 0.5rem;
+        height: 34rem;
+        margin-bottom: 1rem;
+        & div{
+            margin: 1rem;
+            float: left;
+            width: 95%;
+            font-size: 1rem;
+        }
+        & article{
+            margin-left: 0%;
+            margin-top: 10rem;
+            height: 70%;
+            & ul{
+                list-style: none;
+                text-align: center;
+                & .input{
+                    border-top: var(--border-size) solid var(--color-border-li);
+                    border-bottom: var(--border-size) solid var(--color-border-li);
+                }
+                & li{
+                    margin: 1rem;
+                    & input{
+                        width: 100%;
+                        border: var(--size-none);
+                    }
+                    & button{
+                        margin-top: 2rem;
+                        height: 2rem;
+                        width: 100%;
+                        border: var(--border-size) solid var(--color-gray);
+                    }
+                }
+            }
+            & h6{
+                margin: 1rem;
+                margin-left: 7rem;
+                margin-bottom: 4rem;
+            }
+            & p{
+                margin-left: 5rem;
             }
         }
     }
@@ -364,5 +367,4 @@ section::-webkit-scrollbar {
             }
         }
     }
-    
 }
