--- a/css/nowplaying.css
+++ b/css/nowplaying.css
@@ -56,18 +56,19 @@ header{
     }
 }
 main{
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
     & section{
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(3, 1fr);
-        padding: 0.5rem 2rem 0.5rem 2rem;
         & article{
+            position: relative;
             & .movie_poster{
                 display: grid;
                 text-decoration: none;
                 text-align: center;
+                padding-bottom: 6rem;
                 font-family: var(--font-londrina);
                 font-size: var(--font-size-movie);
                 color: var(--color-text-engiin);
@@ -76,21 +77,32 @@ main{
                     height: 25rem;
                     width: auto;
                 }
-                
             }
             & .rating{
+                position: absolute;
+                top: 0;
+                left: 15.5vw;
+                width: 28%;
+                height: 7%;
                 display: flex;
+                flex-direction: row;
                 justify-content: center;
                 align-items: center;
+                color: var(--color-text-engiin);
+                padding: 0.6rem; 
+                box-sizing: border-box; 
+                text-align: center;
                 & a{
-                    display: grid;
                     text-decoration: none;
-                    padding: 0.5rem;
-                    font-family: var(--font-text-engiin);
-                    font-size: var(--font-size-big);
-                    color: var(--color-text-engiin);
+                    color: var(--color-text-engiin); 
+                    display: flex;
+                    align-items: center;
+                    padding-left: 0.5rem;
+                    font-size: 1vw; 
                     & img{
-                        height: 2rem;
+                        width: 1.5rem; 
+                        height: auto;
+                        margin-right: 0.2rem; 
                     }
                 }
                 
