--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 :root{
     --color-white: #fff;
     --color-gray:#4F4F4F;
+    --color-bright-gray: #7F7F7F;
     --color-black: #000;
     --color-red: #E60000;
     --font-size-big: 2rem;
@@ -14,7 +15,7 @@
     --color-text-engiin: var(--color-white);
     --color-border-line: var(--color-white);
     --color-border-li:var(--color-gray);
-    --color-footer-text: #7F7F7F;
+    --color-footer-text: var(--color-bright-gray);
 
     --font-header: Arial, Helvetica, sans-serif;
     --font-garchig: 'Balsamiq Sans', sans-serif;
